tests/errors/trait-object-supertrait-ambiguous.ari
trait LeftScore {
  fn score(self) -> i64
}

trait RightScore {
  fn score(self) -> i64
}

trait BothScores: LeftScore + RightScore {
}

impl LeftScore for i64 {
  fn score(self) -> i64 {
    1
  }
}

impl RightScore for i64 {
  fn score(self) -> i64 {
    2
  }
}

impl BothScores for i64 {
}

fn main() -> i64 {
  let value: dyn BothScores = 1i64 as dyn BothScores;
  value.score()
}
